--- a/index.html
+++ b/index.html
@@ -121,15 +121,15 @@
                         <div class="projects-img-container">
                             <img class="project-coverart" src="./img/inshallah.png" alt="">
                             <div class="project-info">
-                                <button class="project-info-link project-info-link-apple"
+                                <button class="project-info-link project-info-link-apple" data-type="apple"
                                     data-url="https://embed.music.apple.com/us/album/inshallah-lockwood-ave/1568067160"><img
                                         src="./img/applemusic.svg" width="50" height="50" alt=""></button>
-                                <a class="project-info-link"
-                                    href="https://open.spotify.com/album/4EWOxPvIKm3FaFy0EqCT8D?si=hHE85V0dT1CT9rPOInmSHQ"
-                                    target="_blank"><img src="./img/spotify.svg" width="40" height="40" alt=""></a>
-                                <a class="project-info-link"
-                                    href="https://www.youtube.com/playlist?list=OLAK5uy_mdt0KS0hqPkm-lSqQiBNb-_NT6ymoDsqc"
-                                    target="_blank"><img src="./img/youtube.svg" width="40" height="40" alt=""></a>
+                                <button class="project-info-link" data-type="spotify"
+                                    data-url="https://open.spotify.com/embed/album/4EWOxPvIKm3FaFy0EqCT8D?utm_source=generator"><img
+                                        src="./img/spotify.svg" width="40" height="40" alt=""></button>
+                                <button class="project-info-link" data-type="youtube"
+                                    data-url="https://www.youtube.com/embed/videoseries?list=OLAK5uy_mdt0KS0hqPkm-lSqQiBNb-_NT6ymoDsqc"
+                                    target="_blank"><img src="./img/youtube.svg" width="40" height="40" alt=""></button>
                             </div>
                         </div>
                         <div class="project-title">
@@ -142,14 +142,15 @@
                             <img class="project-coverart" src="./img/midnight.png" alt="">
 
                             <div class="project-info">
-                                <button class="project-info-link project-info-link-apple"
+                                <button class="project-info-link project-info-link-apple" data-type="apple"
                                     data-url="https://embed.music.apple.com/us/album/midnight-feat-kryoko-single/1593710216"><img
                                         src="./img/applemusic.svg" width="50" height="50" alt=""></button>
-                                <a class="project-info-link"
-                                    href="https://open.spotify.com/album/6Hfla6bA9C3NMzda9SzK6c?si=2A1gqbrBTbq63zdFt9FAOw"
-                                    target="_blank"><img src="./img/spotify.svg" width="40" height="40" alt=""></a>
-                                <a class="project-info-link" href="https://www.youtube.com/watch?v=Pv0GLkmjFbA"
-                                    target="_blank"><img src="./img/youtube.svg" width="40" height="40" alt=""></a>
+                                <button class="project-info-link" data-type="spotify"
+                                    data-url="https://open.spotify.com/embed/track/5bHYy1l1w0q3bIeck8Wb3N?utm_source=generator"><img
+                                        src="./img/spotify.svg" width="40" height="40" alt=""></button>
+                                <button class="project-info-link" data-type="youtube"
+                                    data-url="https://www.youtube.com/embed/Pv0GLkmjFbA"><img src="./img/youtube.svg"
+                                        width="40" height="40" alt=""></button>
                             </div>
                         </div>
 
@@ -163,14 +164,15 @@
                         <div class="projects-img-container">
                             <img class="project-coverart" src="./img/havana.png" alt="">
                             <div class="project-info">
-                                <button class="project-info-link project-info-link-apple"
+                                <button class="project-info-link project-info-link-apple" data-type="apple"
                                     data-url="https://embed.music.apple.com/us/album/havana-feat-bigbodysam-single/1576754068"><img
                                         src="./img/applemusic.svg" width="50" height="50" alt=""></button>
-                                <a class="project-info-link"
-                                    href="https://open.spotify.com/album/189PDYP8Iu813kZYsZx3qj?si=Fe5MjvNVTWKBlkS1uAbd-Q"
-                                    target="_blank"><img src="./img/spotify.svg" width="40" height="40" alt=""></a>
-                                <a class="project-info-link" href="https://www.youtube.com/watch?v=LUZvz9PnymI"
-                                    target="_blank"><img src="./img/youtube.svg" width="40" height="40" alt=""></a>
+                                <button class="project-info-link" data-type="spotify"
+                                    data-url="https://open.spotify.com/embed/track/4Up70Q72SI7OF2PCVXymgu?utm_source=generator"><img
+                                        src="./img/spotify.svg" width="40" height="40" alt=""></button>
+                                <button class="project-info-link" data-type="youtube"
+                                    data-url="https://www.youtube.com/embed/LUZvz9PnymI"><img src="./img/youtube.svg"
+                                        width="40" height="40" alt=""></buttona>
                             </div>
                         </div>
                         <div class="project-title">
@@ -183,14 +185,15 @@
                         <div class="projects-img-container">
                             <img class="project-coverart" src="./img/Big Body Sam-4.png" alt="">
                             <div class="project-info">
-                                <button class="project-info-link project-info-link-apple"
+                                <button class="project-info-link project-info-link-apple" data-type="apple"
                                     data-url="https://embed.music.apple.com/us/album/on-a-roll-single-feat-thiigo-single/1524590287"><img
                                         src="./img/applemusic.svg" width="50" height="50" alt=""></button>
-                                <a class="project-info-link"
-                                    href="https://open.spotify.com/album/11jdXSY6OEickRuSgmXDdJ?si=ZoFKmIekSrGTo8a-N0ZMZg"
-                                    target="_blank"><img src="./img/spotify.svg" width="40" height="40" alt=""></a>
-                                <a class="project-info-link" href="https://www.youtube.com/watch?v=5cAV7Di8KmU"
-                                    target="_blank"><img src="./img/youtube.svg" width="40" height="40" alt=""></a>
+                                <button class="project-info-link" data-type="spotify"
+                                    data-url="https://open.spotify.com/embed/track/2TuVU0PYK3UJk8RIhJvLYD?utm_source=generator"><img
+                                        src="./img/spotify.svg" width="40" height="40" alt=""></button>
+                                <button class="project-info-link" data-type="youtube"
+                                    data-url="https://www.youtube.com/embed/5cAV7Di8KmU"><img src="./img/youtube.svg"
+                                        width="40" height="40" alt=""></button>
                             </div>
                         </div>
                         <div class="project-title">
@@ -203,14 +206,15 @@
                         <div class="projects-img-container">
                             <img class="project-coverart" src="./img/summervibe.png" alt="">
                             <div class="project-info">
-                                <button class="project-info-link project-info-link-apple"
+                                <button class="project-info-link project-info-link-apple" data-type="apple"
                                     data-url="https://embed.music.apple.com/us/album/summer-vibe-feat-bigbodysam/1581536687?i=1581536692"><img
                                         src="./img/applemusic.svg" width="50" height="50" alt=""></button>
-                                <a class="project-info-link"
-                                    href="https://open.spotify.com/track/5fMCiPFAXuc9xLNAd5zxo0?si=9784da16cbaf4a50"
-                                    target="_blank"><img src="./img/spotify.svg" width="40" height="40" alt=""></a>
-                                <a class="project-info-link" href="https://www.youtube.com/watch?v=97fwk6s9Ktk"
-                                    target="_blank"><img src="./img/youtube.svg" width="40" height="40" alt=""></a>
+                                <button class="project-info-link" data-type="spotify"
+                                    data-url="https://open.spotify.com/embed/track/5fMCiPFAXuc9xLNAd5zxo0?utm_source=generator"><img
+                                        src="./img/spotify.svg" width="40" height="40" alt=""></button>
+                                <button class="project-info-link" data-type="youtube"
+                                    data-url="https://www.youtube.com/embed/97fwk6s9Ktk"><img src="./img/youtube.svg"
+                                        width="40" height="40" alt=""></button>
                             </div>
                         </div>
                         <div class="project-title">
@@ -348,11 +352,8 @@
         <!-- Modal content -->
         <div class="modal-content">
             <span class="close">&times;</span>
-            <div>
-                <iframe class="apple-iframe" allow="autoplay *; encrypted-media *;" frameborder="0" height="450"
-                    style="width:100%;max-width:660px;overflow:hidden;background:transparent;"
-                    sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation"
-                    src="https://embed.music.apple.com/us/album/inshallah-lockwood-ave/1568067160"></iframe>
+            <div class="modal-content-iframe">
+
             </div>
         </div>
 
