--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </svg>
     <header class="header">
         <div class="header-inner">
-            <button class="btn-toggle">Enter the dark realm</button>
+            <button aria-label="Toggle Theme" class="btn-toggle">Enter the dark realm</button>
             <div class="header-top">
                 <img class="logo" src="./img/wheatlogo.png" alt="">
                 <span class="mobile-menu"><img class="menu-icon" src="./img/wheatham.svg" alt=""><img
@@ -121,13 +121,14 @@
                         <div class="projects-img-container">
                             <img class="project-coverart" src="./img/inshallah.png" alt="">
                             <div class="project-info">
-                                <button class="project-info-link project-info-link-apple" data-type="apple"
+                                <button aria-label="Inshallah - Apple" class="project-info-link project-info-link-apple"
+                                    data-type="apple"
                                     data-url="https://embed.music.apple.com/us/album/inshallah-lockwood-ave/1568067160"><img
                                         src="./img/applemusic.svg" width="50" height="50" alt=""></button>
-                                <button class="project-info-link" data-type="spotify"
+                                <button aria-label="Inshallah - Spotify" class="project-info-link" data-type="spotify"
                                     data-url="https://open.spotify.com/embed/album/4EWOxPvIKm3FaFy0EqCT8D?utm_source=generator"><img
                                         src="./img/spotify.svg" width="40" height="40" alt=""></button>
-                                <button class="project-info-link" data-type="youtube"
+                                <button aria-label="Inshallah - Youtube" class="project-info-link" data-type="youtube"
                                     data-url="https://www.youtube.com/embed/videoseries?list=OLAK5uy_mdt0KS0hqPkm-lSqQiBNb-_NT6ymoDsqc"
                                     target="_blank"><img src="./img/youtube.svg" width="40" height="40" alt=""></button>
                             </div>
@@ -142,13 +143,14 @@
                             <img class="project-coverart" src="./img/midnight.png" alt="">
 
                             <div class="project-info">
-                                <button class="project-info-link project-info-link-apple" data-type="apple"
+                                <button aria-label="MIDNIGHT - Apple" class="project-info-link project-info-link-apple"
+                                    data-type="apple"
                                     data-url="https://embed.music.apple.com/us/album/midnight-feat-kryoko-single/1593710216"><img
                                         src="./img/applemusic.svg" width="50" height="50" alt=""></button>
-                                <button class="project-info-link" data-type="spotify"
+                                <button aria-label="MIDNIGHT - Spotify" class="project-info-link" data-type="spotify"
                                     data-url="https://open.spotify.com/embed/track/5bHYy1l1w0q3bIeck8Wb3N?utm_source=generator"><img
                                         src="./img/spotify.svg" width="40" height="40" alt=""></button>
-                                <button class="project-info-link" data-type="youtube"
+                                <button aria-label="MIDNIGHT - Youtube" class="project-info-link" data-type="youtube"
                                     data-url="https://www.youtube.com/embed/Pv0GLkmjFbA"><img src="./img/youtube.svg"
                                         width="40" height="40" alt=""></button>
                             </div>
@@ -164,13 +166,14 @@
                         <div class="projects-img-container">
                             <img class="project-coverart" src="./img/havana.png" alt="">
                             <div class="project-info">
-                                <button class="project-info-link project-info-link-apple" data-type="apple"
+                                <button aria-label="HAVANA - Apple" class="project-info-link project-info-link-apple"
+                                    data-type="apple"
                                     data-url="https://embed.music.apple.com/us/album/havana-feat-bigbodysam-single/1576754068"><img
                                         src="./img/applemusic.svg" width="50" height="50" alt=""></button>
-                                <button class="project-info-link" data-type="spotify"
+                                <button aria-label="HAVANA - Spotify" class="project-info-link" data-type="spotify"
                                     data-url="https://open.spotify.com/embed/track/4Up70Q72SI7OF2PCVXymgu?utm_source=generator"><img
                                         src="./img/spotify.svg" width="40" height="40" alt=""></button>
-                                <button class="project-info-link" data-type="youtube"
+                                <button aria-label="HAVANA - Youtube" class="project-info-link" data-type="youtube"
                                     data-url="https://www.youtube.com/embed/LUZvz9PnymI"><img src="./img/youtube.svg"
                                         width="40" height="40" alt=""></buttona>
                             </div>
@@ -185,13 +188,14 @@
                         <div class="projects-img-container">
                             <img class="project-coverart" src="./img/Big Body Sam-4.png" alt="">
                             <div class="project-info">
-                                <button class="project-info-link project-info-link-apple" data-type="apple"
+                                <button aria-label="ON A ROLL - Apple" class="project-info-link project-info-link-apple"
+                                    data-type="apple"
                                     data-url="https://embed.music.apple.com/us/album/on-a-roll-single-feat-thiigo-single/1524590287"><img
                                         src="./img/applemusic.svg" width="50" height="50" alt=""></button>
-                                <button class="project-info-link" data-type="spotify"
+                                <button aria-label="ON A ROLL - Spotify" class="project-info-link" data-type="spotify"
                                     data-url="https://open.spotify.com/embed/track/2TuVU0PYK3UJk8RIhJvLYD?utm_source=generator"><img
                                         src="./img/spotify.svg" width="40" height="40" alt=""></button>
-                                <button class="project-info-link" data-type="youtube"
+                                <button aria-label="ON A ROLL - Youtube" class="project-info-link" data-type="youtube"
                                     data-url="https://www.youtube.com/embed/5cAV7Di8KmU"><img src="./img/youtube.svg"
                                         width="40" height="40" alt=""></button>
                             </div>
@@ -206,13 +210,14 @@
                         <div class="projects-img-container">
                             <img class="project-coverart" src="./img/summervibe.png" alt="">
                             <div class="project-info">
-                                <button class="project-info-link project-info-link-apple" data-type="apple"
+                                <button aria-label="SUMMER VIBE - Apple"
+                                    class="project-info-link project-info-link-apple" data-type="apple"
                                     data-url="https://embed.music.apple.com/us/album/summer-vibe-feat-bigbodysam/1581536687?i=1581536692"><img
                                         src="./img/applemusic.svg" width="50" height="50" alt=""></button>
-                                <button class="project-info-link" data-type="spotify"
+                                <button aria-label="SUMMER VIBE - Spotify" class="project-info-link" data-type="spotify"
                                     data-url="https://open.spotify.com/embed/track/5fMCiPFAXuc9xLNAd5zxo0?utm_source=generator"><img
                                         src="./img/spotify.svg" width="40" height="40" alt=""></button>
-                                <button class="project-info-link" data-type="youtube"
+                                <button aria-label="SUMMER VIBE - Youtube" class="project-info-link" data-type="youtube"
                                     data-url="https://www.youtube.com/embed/97fwk6s9Ktk"><img src="./img/youtube.svg"
                                         width="40" height="40" alt=""></button>
                             </div>
@@ -324,13 +329,13 @@
                 <p>LEAVE YOUR NAME, NUMBER AND EMAIL ALONG WITH A MESSAGE! I’LL GET BACK TO YOU AS SOON AS I CAN!</p>
                 <form id="my-form" action="https://formspree.io/f/mwkywogz" method="POST">
 
-                    <input aria-labelledby="FULL NAME" type="text" name="fullName" placeholder="Full Name" required />
-                    <input aria-labelledby="EMAIL" type="email" name="email" placeholder="Email:" required="@">
-                    <input aria-labelledby="PHONE NUMBER" type="tel" name="phoneNumber" placeholder="Phone Number:"
+                    <input aria-label="FULL NAME:" type="text" name="fullName" placeholder="Full Name" required />
+                    <input aria-label="EMAIL:" type="email" name="email" placeholder="Email:" required="@">
+                    <input aria-label="PHONE NUMBER:" type="tel" name="phoneNumber" placeholder="Phone Number:"
                         required="number" />
-                    <textarea aria-labelledby="MESSAGE" name="message" placeholder="Message:" required></textarea>
+                    <textarea aria-label="MESSAGE:" name="message" placeholder="Message:" required></textarea>
 
-                    <div class="form-submit"><button id="my-form-button">Submit</button></div>
+                    <div class="form-submit"><button aria-label="" id="my-form-button">Submit</button></div>
 
                     <p id="my-form-status"></p>
                 </form>
