--- a/index.html
+++ b/index.html
@@ -94,15 +94,15 @@
                     <div>I am</div> <span class="typewrite"> SAMIR KHOURY</span>
                 </div>
                 <div class="hero-content-subtitle">
-                    <a class="shine-full-stack shine" href="#skills">Full-Stack Developer</a> /
-                    <a class="shine-music" href="#discography">Musical Genius</a>
+                    <a aria-label=" Skills" class="shine-full-stack shine" href="#skills">Full-Stack Developer</a> /
+                    <a aria-label=" Discography" class="shine-music" href="#discography">Musical Genius</a>
                 </div>
                 <div>
-                    <a class="homeicon" href="https://github.com/samirkhoury98" target="_blank"><svg
-                            class="icon-github_icon">
+                    <a aria-label="Link to GitHub" class="homeicon" href="https://github.com/samirkhoury98"
+                        target="_blank"><svg class="icon-github_icon">
                             <use xlink:href="#icon-github_icon"></use>
                         </svg></a>
-                    <a class="homeicon" href="#contactme"><svg class="icon-email">
+                    <a aria-label="EMAIL" class="homeicon" href="#contactme"><svg class="icon-email">
                             <use xlink:href="#icon-email"></use>
                         </svg></a>
                 </div>
