--- a/index.html
+++ b/index.html
@@ -27,6 +27,31 @@
     <svg aria-hidden="true" style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1"
         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
         <defs>
+            <symbol id="icon-linkedin_network_social-network_linkedin-logo_icon" viewBox="0 0 32 32">
+                <path
+                    d="M28.090 0c2.158 0 3.91 1.752 3.91 3.91v24.181c0 2.158-1.752 3.91-3.91 3.91h-24.181c-2.158 0-3.91-1.752-3.91-3.91v-24.181c0-2.158 1.752-3.91 3.91-3.91h24.181zM10.029 26.455v-14.107h-4.69v14.107h4.69zM26.938 26.455v-8.090c0-4.333-2.314-6.349-5.399-6.349-2.488 0-3.602 1.368-4.226 2.329v-1.997h-4.689c0.062 1.324 0 14.107 0 14.107h4.689v-7.878c0-0.422 0.030-0.843 0.155-1.145 0.338-0.842 1.11-1.715 2.406-1.715 1.696 0 2.375 1.294 2.375 3.19v7.548h4.689zM7.715 5.545c-1.605 0-2.653 1.055-2.653 2.438 0 1.354 1.016 2.438 2.591 2.438h0.030c1.635 0 2.653-1.084 2.653-2.438-0.030-1.381-1.015-2.435-2.621-2.438z">
+                </path>
+            </symbol>
+            <symbol id="icon-resume_contract_form_document_file_icon" viewBox="0 0 32 32">
+                <path
+                    d="M31.313 7.709c-0.045-0.101-0.127-0.18-0.229-0.219l-0.003-0.001-19.325-7.46c-0.045-0.018-0.097-0.029-0.152-0.029-0.176 0-0.327 0.11-0.387 0.265l-0.001 0.003-1.105 2.868-3.965-0.738c-0.022-0.004-0.046-0.006-0.072-0.006-0.204 0-0.374 0.145-0.413 0.337l-0 0.003-0.566 3.023h-4.030c-0.23 0-0.416 0.186-0.416 0.416v0 25.413c0 0.23 0.186 0.416 0.416 0.416v0h20.716c0 0 0.001 0 0.001 0 0.193 0 0.356-0.132 0.402-0.311l0.001-0.003 9.135-23.657c0.018-0.045 0.028-0.097 0.028-0.151 0-0.061-0.013-0.119-0.037-0.172l0.001 0.003zM22.2 6.239l3.748 0.698-3.748 20.114zM11.843 0.958l12.525 4.835-13.426-2.501zM6.404 3.297l13.2 2.459h-13.659zM1.487 6.591h19.879v24.573h-19.879zM23.022 27.203l3.813-20.458 3.557 1.373z">
+                </path>
+                <path
+                    d="M17.844 25.484h-12.838c-0.231 0-0.418 0.187-0.418 0.418s0.187 0.418 0.418 0.418v0h12.838c0.231 0 0.418-0.187 0.418-0.418s-0.187-0.418-0.418-0.418v0z">
+                </path>
+                <path
+                    d="M17.844 22.372h-12.838c-0.231 0-0.418 0.187-0.418 0.418s0.187 0.418 0.418 0.418v0h12.838c0.231 0 0.418-0.187 0.418-0.418s-0.187-0.418-0.418-0.418v0z">
+                </path>
+                <path
+                    d="M17.844 19.259h-12.838c-0.231 0-0.418 0.187-0.418 0.418s0.187 0.418 0.418 0.418v0h12.838c0.231 0 0.418-0.187 0.418-0.418s-0.187-0.418-0.418-0.418v0z">
+                </path>
+                <path
+                    d="M17.844 16.146h-12.838c-0.231 0-0.418 0.187-0.418 0.418s0.187 0.418 0.418 0.418v0h12.838c0.231 0 0.418-0.187 0.418-0.418s-0.187-0.418-0.418-0.418v0z">
+                </path>
+                <path
+                    d="M5.005 13.869h9.58c0.231 0 0.418-0.187 0.418-0.418s-0.187-0.418-0.418-0.418v0h-9.58c-0.231 0-0.418 0.187-0.418 0.418s0.187 0.418 0.418 0.418v0z">
+                </path>
+            </symbol>
             <symbol id="icon-ic_baseline-double-arrow" viewBox="0 0 32 32">
                 <path d="M2.636 9.796v8.591l13.364-9.545 13.364 9.545v-8.591l-13.364-9.545-13.364 9.545z"></path>
                 <path d="M2.636 23.159v8.591l13.364-9.545 13.364 9.545v-8.591l-13.364-9.545-13.364 9.545z"></path>
@@ -112,6 +137,18 @@
                     <a aria-label="EMAIL" class="homeicon" href="#contactme"><svg class="icon-email">
                             <use xlink:href="#icon-email"></use>
                         </svg></a>
+
+                    <a class="homeicon" aria-label="Resume" href="./pdf/Samir_Khoury_Resume.pdf" target="_blank"><svg
+                            class="icon-resume_contract_form_document_file_icon">
+                            <use xlink:href="#icon-resume_contract_form_document_file_icon"></use>
+                        </svg></a>
+
+                    <a class="homeicon" aria-label="LinkedIn" href="https://www.linkedin.com/in/samir-khoury/"
+                        target="_blank"><svg class="icon-linkedin_network_social-network_linkedin-logo_icon">
+                            <use xlink:href="#icon-linkedin_network_social-network_linkedin-logo_icon"></use>
+                        </svg></a>
+
+
                 </div>
             </div>
         </section>
