--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </svg>
     <header class="header">
         <div class="header-inner">
-            <button aria-label="Toggle Theme" class="btn-toggle">Enter the dark realm</button>
+            <button aria-label="Toggle Theme" class="btn-toggle">ENTER THE DARK REALM</button>
             <div class="header-top">
                 <img class="logo" src="./img/wheatlogo.png" alt="">
                 <span class="mobile-menu"><img class="menu-icon" src="./img/wheatham.svg" alt=""><img
