--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                             <use xlink:href="#icon-email"></use>
                         </svg></a>
 
-                    <a class="homeicon" aria-label="Resume" href="./pdf/Samir_Khoury_Resum.pdf" target="_blank"><svg
+                    <a class="homeicon" aria-label="Resume" href="./pdf/SAMIR_KHOURY_Resume.pdf" target="_blank"><svg
                             class="icon-resume_contract_form_document_file_icon">
                             <use xlink:href="#icon-resume_contract_form_document_file_icon"></use>
                         </svg></a>
