--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
                     <a class="homeicon" aria-label="Resume" href="./pdf/SAMIR_KHOURY_Resume.pdf" target="_blank"><svg
                             class="icon-resume_contract_form_document_file_icon">
-                            <use xlink:href="#icon-resume_contract_form_document_file_icon"></use>
+                            <use link:href="#icon-resume_contract_form_document_file_icon"></use>
                         </svg></a>
 
                     <a class="homeicon" aria-label="LinkedIn" href="https://www.linkedin.com/in/samir-khoury/"
