--- a/index.html
+++ b/index.html
@@ -354,7 +354,11 @@
             </header>
             <div class="swiper swiper-portfolio">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide"><img src="https://via.placeholder.com/300/hhh/fff" alt=""></div>
+                    <div class="swiper-slide">
+                        <a href="./portfolio-projects/tic-tac-toe/index.html"><img
+                                src="https://via.placeholder.com/300/hhh/fff" alt="">
+                        </a>
+                    </div>
                     <div class="swiper-slide"><img src="https://via.placeholder.com/300" alt=""></div>
                     <div class="swiper-slide"><img src="https://via.placeholder.com/300/hhh/fff" alt=""></div>
                     <div class="swiper-slide"><img src="https://via.placeholder.com/300" alt=""></div>
