--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
             <div class="swiper swiper-portfolio">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <a href="./portfolio-projects/tic-tac-toe/index.html"><img
+                        <a target="_blank" href="./portfolio-projects/tic-tac-toe/index.html"><img
                                 src="https://via.placeholder.com/300/hhh/fff" alt="">
                         </a>
                     </div>
