--- a/index.html
+++ b/index.html
@@ -356,10 +356,10 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <a target="_blank" href="./portfolio-projects/tic-tac-toe/index.html"><img
-                                src="https://via.placeholder.com/300/hhh/fff" alt="">
+                                src="./port-projects-pics/tic-tac-toe.png" alt="">
                         </a>
                     </div>
-                    <div class="swiper-slide"><img src="https://via.placeholder.com/300" alt=""></div>
+                    <div class="swiper-slide"><img src="https://via.placeholder.com/300/hhh/fff" alt=""></div>
                     <div class="swiper-slide"><img src="https://via.placeholder.com/300/hhh/fff" alt=""></div>
                     <div class="swiper-slide"><img src="https://via.placeholder.com/300" alt=""></div>
                     <div class="swiper-slide"><img src="https://via.placeholder.com/300/hhh/fff" alt=""></div>
