--- a/index.html
+++ b/index.html
@@ -345,9 +345,17 @@
                             class="section-subset-item-title">RSPEC</span></div>
                     <div class="section-subset-item"><img src="./img/jest.svg" alt=""><span
                             class="section-subset-item-title">JEST</span></div>
+                    <div class="section-subset-item"><img class="sass" src="./img/sass.svg" alt=""><span
+                            class="section-subset-item-title">SASS</span></div>
+                    <div class="section-subset-item"><img src="./img/swift.svg" alt=""><span
+                            class="section-subset-item-title">SWIFT</span></div>
+                    <div class="section-subset-item"><img src="./img/icons8-bootstrap-100.svg" alt=""><span
+                            class="section-subset-item-title">BOOTSTRAP</span></div>
+                    <div class="section-subset-item"><img class="reactstrap" src="./img/klipartz.com.png" alt=""><span
+                            class="section-subset-item-title">REACTSTRAP</span></div>
                 </div>
             </section>
-        </section>
+        </section>s
         <section id="portfolio" class="portfolio">
             <header class="section-heading">
                 <h1 class="section-title">Portfolio</h1>
