--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                             class="section-subset-item-title">REACTSTRAP</span></div>
                 </div>
             </section>
-        </section>s
+        </section>
         <section id="portfolio" class="portfolio">
             <header class="section-heading">
                 <h1 class="section-title">Portfolio</h1>
