--- a/index.html
+++ b/index.html
@@ -138,9 +138,10 @@
                             <use xlink:href="#icon-email"></use>
                         </svg></a>
 
-                    <svg class="icon-resume_contract_form_document_file_icon">
-                        <use xlink:href="#icon-resume_contract_form_document_file_icon"></use>
-                    </svg></a>
+                    <a class="homeicon" aria-label="Resume" href="./pdf/SAMIR_KHOURY_Resume.pdf" target="_blank">
+                        <svg class="icon-resume_contract_form_document_file_icon">
+                            <use xlink:href="#icon-resume_contract_form_document_file_icon"></use>
+                        </svg></a>
 
                     <a class="homeicon" aria-label="LinkedIn" href="https://www.linkedin.com/in/samir-khoury/"
                         target="_blank"><svg class="icon-linkedin_network_social-network_linkedin-logo_icon">
