--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <meta name="description"
-        content="#Are you in need of a new software engineer or just want to see some cool ish? Click the link and stop on by!">
+        content="Are you in need of a new software engineer or just want to see some cool ish? Click the link and stop on by!">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
