--- a/index.html
+++ b/index.html
@@ -298,6 +298,8 @@
                         <h2>DEVELOPMENT:</h2>
                         <p>I Learned Front-End And Back-End Development At The LearnAcademy Based In San Diego,
                             California And I Earned The Status Of Full-Stack Developer In The Spring Of '22</p>
+                        <p>From June '22 - July '22 I had the opportunity to intern as a developer @Scientist.com in
+                            the Software Services (Soft-Serve) department</p>
 
                         <h2>TRANSFERABLE SKILL:</h2>
                         <p>Genuine and productive critical thinking and problem-solving cannot exist in the absence of
@@ -355,8 +357,49 @@
                             class="section-subset-item-title">BOOTSTRAP</span></div>
                     <div class="section-subset-item"><img class="reactstrap" src="./img/klipartz.com.png" alt=""><span
                             class="section-subset-item-title">REACTSTRAP</span></div>
+                    <div class="section-subset-item"><img class="sass" src="./img/drupal.svg" alt=""><span
+                            class="section-subset-item-title">DRUPAL</span></div>
+                    <div class="section-subset-item"><img src="./img/4747499_github_icon.svg" alt=""><span
+                            class="section-subset-item-title">GITHUB</span></div>
+                    <div class="section-subset-item"><img src="./img/gitlab.svg" alt=""><span
+                            class="section-subset-item-title">GITLAB</span></div>
+                    <div class="section-subset-item"><img class="reactstrap" src="./img/Gatsby_Monogram.svg"
+                            alt=""><span class="section-subset-item-title">GATSBY</span></div>
                 </div>
             </section>
+        </section>
+        <section>
+            <!DOCTYPE html>
+            <html lang="en">
+
+            <head>
+                <meta charset="UTF-8">
+                <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                <meta http-equiv="X-UA-Compatible" content="ie=edge">
+                <title>Carousel</title>
+                <link rel="stylesheet" href="carousel.css">
+            </head>
+
+            <body>
+                <section class="gallery">
+                    <header class="section-heading">
+                        <h1 class="section-title">GALLERY</h1>
+                    </header>
+                    <div class="gallery-container">
+                        <img class="gallery-item gallery-item-1" src="./img/B.B.E._logo.png" data-index="1">
+                        <img class="gallery-item gallery-item-2" src="./img/apartment_logout.png" data-index="2">
+                        <img class="gallery-item gallery-item-3" src="./img/capstone-loggedin.png" data-index="3">
+                        <img class="gallery-item gallery-item-4" src="./img/capstone-loggedout.png" data-index="4">
+                        <img class="gallery-item gallery-item-5" src="./img/colors.png" data-index="5">
+                    </div>
+                    <div class="gallery-controls"></div>
+                </section>
+
+                <script src="carousel.js"></script>
+            </body>
+
+            </html>
+            </div>
         </section>
         <section id="portfolio" class="portfolio">
             <header class="section-heading">
@@ -432,7 +475,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.13.2/plugins/ColorPropsPlugin.min.js"></script>
     <script src="./js/index.js"></script>
-
+    <script src="./js/carousel.js"></script>
 
 </body>
 
