--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                 </div>
             </section>
         </section>
-        <section>
+        <!-- <section>
             <!DOCTYPE html>
             <html lang="en">
 
@@ -393,7 +393,7 @@
                         <img class="gallery-item gallery-item-5" src="./img/colors.png" data-index="5">
                     </div>
                     <div class="gallery-controls"></div>
-                </section>
+                </section> -->
 
                 <script src="carousel.js"></script>
             </body>
